fixes al clippeo | agregado gif de carga
- agregada funcion para escribir errores a un archivo local para debuggear mas tarde
- mejorado el comando ffmpeg para resamplear el audio (para que este synceado), y para no skippear el primer segundo de video

--- a/page/css/index.css
+++ b/page/css/index.css
@@ -3,14 +3,9 @@
 }
 
 .center_page {
-    position: relative;
+    position: absolute;
     top: 50%;
     left: 50%;
     margin-top: -100px;
     margin-left: -100px;
-}
-
-.center_bot {
-    display: flex;
-    justify-content: center;
 }
